# ont-minimap2

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: ont_minimap2.c  ont_minimap2.h
src/patches/: 0001-Load-the-counter-of-the-worker-we-might-steal-from-atomically.patch  0001-__typeof__-macro-is-not-available-in-MSVC-passing-ty.patch  0002-Introduce-a-sentinel-to-work-around-UBSan-issues.patch  0003-Make-mm_tbuf_t-struct-public.patch  0003-Skip-radix-sort-if-no-seed-hits.patch  0004-Add-null-check-following-UBSan-finding.patch  0005-Silence-Wshorten-64-to-32-warning.patch  0006-Abort-on-allocation-failure-in-index-loading.patch  0007-Add-callbacks-for-memory-management.patch
